devops/deploy/k8s/base/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gke-example
    release: gke-example
  name: gke-example
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gke-example
      release: gke-example
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gke-example
        release: gke-example
    spec:
      containers:
        - name: gke-example
          image: mck-b2b-connect-docker.jfrog.io/b2b-connect/PROJECT_ID/IMAGE:TAG
          imagePullPolicy: Always
          resources:
            limits:
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 500Mi
      restartPolicy: Always
