devops/deploy/k8s/base/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gke-example
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
  labels:
    app: gke-example
